# bevy-jam-template

./: Cargo.toml  LICENSE  README.md
assets/shaders/: shader.wgsl
src/: main.rs  screen.rs  settings.rs  ui.rs
src/screen/: mod.rs  plugins.rs  states.rs
src/screen/title/: components.rs  mod.rs  plugins.rs  systems.rs
src/screen/world/: components.rs  mod.rs  plugins.rs  systems.rs
src/screen/world/terrain/: components.rs  materials.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/settings/: actions.rs  mod.rs  plugins.rs  resources.rs  systems.rs
src/terrain/: plugin.rs  systems.rs
src/ui/: main_menu.rs  mod.rs
