[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"
leafwing-input-manager = "0.16.0"
bevy_panorbit_camera = "0.22.0"
i-cant-believe-its-not-bsn = "0.3.0"
bevy-inspector-egui = "0.28.1"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1